--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Demo</title>
     <script src="nexus.js"></script>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <div  aria-label="piano" id="target"></div>
+        <div  aria-label="piano" id="target" tabindex="0"></div>
 
 <script src="app.js"></script>  
 </body>
