Added responsive behaviour in Piano

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
         <div  aria-label="piano" id="target" tabindex="0"></div>
 
-<script src="app.js"></script>  
+<script src="app.js"></script>
+<link rel="stylesheet" href="style.css">  
 </body>
 </html>
